feat: support VirtualEntities across server platforms